@@ -3569,7 +3569,60 @@
             </property>
            </spacer>
           </item>
-          <item row="4" column="0" colspan="5" >
+          <item row="4" column="3" >
+           <widget class="QLabel" name="JackClientPortAliasTextLabel" >
+            <property name="font" >
+             <font>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="text" >
+             <string>&amp;JACK client/port aliases:</string>
+            </property>
+            <property name="wordWrap" >
+             <bool>false</bool>
+            </property>
+            <property name="buddy" >
+             <cstring>JackClientPortAliasComboBox</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="4" >
+           <widget class="QComboBox" name="JackClientPortAliasComboBox" >
+            <property name="font" >
+             <font>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="toolTip" >
+             <string>JACK client/port aliases display mode</string>
+            </property>
+            <property name="editable" >
+             <bool>false</bool>
+            </property>
+            <property name="currentIndex" >
+             <number>0</number>
+            </property>
+            <item>
+             <property name="text" >
+              <string>Default</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>First</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>Second</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="4" column="0" colspan="3" >
            <widget class="QCheckBox" name="AliasesEditingCheckBox" >
             <property name="font" >
              <font>
